<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/backMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#060825"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="2dp"
    tools:context="pl.nuvi.andre.myapplication.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>

            <EditText
                android:id="@+id/yourNameEditTextActivityMainId"
                style="@style/NamesStyle"
                android:hint="@string/your_name"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/yourSurnameEditTextActivityMainId"
                style="@style/NamesStyle"
                android:hint="@string/your_last_name" />

            <EditText
                android:id="@+id/yourFatherNameEditTextActivityMainId"
                style="@style/NamesStyle"
                android:hint="@string/your_father_name" />

            <EditText
                android:id="@+id/yourMotherNameActivityMainId"
                style="@style/NamesStyle"
                android:hint="@string/your_mother_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/your_entries_are_used_only_for_generate_dragon_name_and_are_not_collected"
                android:textAlignment="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <Button
                android:id="@+id/checkYourDragonNameButtonActivityMainID"
                style="@style/NamesStyle"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="#258CEB"
                android:text="@string/check_your_dragon_name"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

            <Button
                android:id="@+id/resetButtonActivityMainID"
                style="@style/NamesStyle"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="#001940"
                android:text="@string/reset"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />



        </LinearLayout>


</ScrollView>
