<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#060825"
    android:orientation="vertical"
    tools:context="pl.nuvi.andre.myapplication.DragonName">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageViewActivityDragonNameId"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:contentDescription="@string/view_of_dragon"
                        android:scaleType="centerCrop"
                        android:src="@drawable/smok19" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/gradient"
                        android:contentDescription="@string/gradient_black_to_opacity" />

                    <WebView
                        android:id="@+id/sandara"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#aaFFFFFF"
                        android:textSize="5sp"
                        tools:ignore="SmallSp" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/your_dragon_name_is"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dragonNameTextViewActivityDragonNameId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/your_dragon_name"
                    android:textColor="#FFFFFF"
                    android:textSize="60sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dovakinBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/want_this_name" />



                <TextView
                    android:id="@+id/dovakinTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/your_name_dragon_is"
                    android:textSize="20sp" />



                <TextView
                    android:id="@+id/dovakinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="10dp"
                    android:text="dovakin"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
